@@ -18,16 +18,40 @@ public class VariationTracker {
      * Track all variations between two token sequences.
      */
     public VariationAnalysis trackVariations(List<Token> tokens1, List<Token> tokens2) {
+        return trackVariations(tokens1, null, tokens2, null);
+    }
+
+    /**
+     * Track all variations between two token sequences, capturing actual values
+     * from
+     * the source statements.
+     */
+    public VariationAnalysis trackVariations(
+            List<Token> tokens1, StatementSequence seq1,
+            List<Token> tokens2, StatementSequence seq2) {
+
         if (tokens1 == null || tokens2 == null) {
-            return new VariationAnalysis(List.of(), false, new HashMap<>());
+            return new VariationAnalysis(
+                    List.of(),
+                    false,
+                    new java.util.HashMap<Integer, java.util.Map<StatementSequence, String>>(),
+                    java.util.Collections.emptyList(),
+                    new java.util.HashMap<Integer, java.util.Map<StatementSequence, com.raditha.dedup.model.ExprInfo>>());
         }
 
         if (tokens1.isEmpty() && tokens2.isEmpty()) {
-            return new VariationAnalysis(List.of(), false, new HashMap<>());
+            return new VariationAnalysis(
+                    List.of(),
+                    false,
+                    new java.util.HashMap<Integer, java.util.Map<StatementSequence, String>>(),
+                    java.util.Collections.emptyList(),
+                    new java.util.HashMap<Integer, java.util.Map<StatementSequence, com.raditha.dedup.model.ExprInfo>>());
         }
 
         // Find all variations
         List<Variation> variations = new ArrayList<>();
+        Map<Integer, Map<StatementSequence, String>> valueBindings = new HashMap<>();
+        Map<Integer, Map<StatementSequence, com.raditha.dedup.model.ExprInfo>> exprBindings = new HashMap<>();
         boolean hasControlFlowDifferences = false;
 
         // For simplicity in Phase 1: use positional alignment if same length
@@ -38,10 +62,16 @@ public class VariationTracker {
                 Token t1 = tokens1.get(i);
                 Token t2 = tokens2.get(i);
 
-                if (!t1.semanticallyMatches(t2)) {
+                boolean semanticallyMatches = t1.semanticallyMatches(t2);
+                boolean isVariableMismatch = semanticallyMatches && t1.type() == TokenType.VAR
+                        && !t1.originalValue().equals(t2.originalValue());
+
+                if (!semanticallyMatches || isVariableMismatch) {
                     Variation variation = createVariation(i, i, t1, t2);
                     if (variation != null) {
                         variations.add(variation);
+                        // Key value bindings by aligned source position to avoid index drift
+                        captureValueBindings(valueBindings, exprBindings, variation.alignedIndex1(), variation, seq1, t1, seq2, t2);
 
                         if (variation.type() == VariationType.CONTROL_FLOW) {
                             hasControlFlowDifferences = true;
@@ -56,7 +86,11 @@ public class VariationTracker {
             for (TokenAlignment alignment : alignments) {
                 if (alignment.token1() != null && alignment.token2() != null) {
                     // Both tokens exist - check if they differ
-                    if (!alignment.token1().semanticallyMatches(alignment.token2())) {
+                    boolean semanticallyMatches = alignment.token1().semanticallyMatches(alignment.token2());
+                    boolean isVariableMismatch = semanticallyMatches && alignment.token1().type() == TokenType.VAR
+                            && !alignment.token1().originalValue().equals(alignment.token2().originalValue());
+
+                    if (!semanticallyMatches || isVariableMismatch) {
                         Variation variation = createVariation(
                                 alignment.index1(),
                                 alignment.index2(),
@@ -64,6 +98,9 @@ public class VariationTracker {
                                 alignment.token2());
                         if (variation != null) {
                             variations.add(variation);
+                            // Key value bindings by aligned source position to avoid index drift
+                            captureValueBindings(valueBindings, exprBindings, variation.alignedIndex1(), variation, seq1, alignment.token1(), seq2,
+                                    alignment.token2());
 
                             if (variation.type() == VariationType.CONTROL_FLOW) {
                                 hasControlFlowDifferences = true;
@@ -81,12 +118,34 @@ public class VariationTracker {
             }
         }
 
-        // TODO Gap 1&2: Populate valueBindings map
-        // For now, return empty map - full fix requires tracking actual values per
-        // sequence
-        Map<Integer, Map<StatementSequence, String>> valueBindings = new HashMap<>();
+        return new VariationAnalysis(variations, hasControlFlowDifferences, valueBindings, tokens1, exprBindings);
+    }
 
-        return new VariationAnalysis(variations, hasControlFlowDifferences, valueBindings);
+    private void captureValueBindings(
+            Map<Integer, Map<StatementSequence, String>> valueBindings,
+            Map<Integer, Map<StatementSequence, com.raditha.dedup.model.ExprInfo>> exprBindings,
+            int paramIndex,
+            Variation variation,
+            StatementSequence seq1, Token t1,
+            StatementSequence seq2, Token t2) {
+
+        // Only capture bindings if we have the sequence context
+        if (seq1 == null || seq2 == null) {
+            return;
+        }
+
+        // Use the caller-provided variation index to key the bindings maps.
+        // Legacy string bindings (for backward compatibility)
+        Map<StatementSequence, String> strBinding = new HashMap<>();
+        strBinding.put(seq1, t1.originalValue());
+        strBinding.put(seq2, t2.originalValue());
+        valueBindings.put(paramIndex, strBinding);
+
+        // New AST-first bindings (ExprInfo) — currently text-backed; later we can attach real nodes
+        Map<StatementSequence, com.raditha.dedup.model.ExprInfo> exprBinding = new HashMap<>();
+        exprBinding.put(seq1, com.raditha.dedup.model.ExprInfo.fromText(t1.originalValue()));
+        exprBinding.put(seq2, com.raditha.dedup.model.ExprInfo.fromText(t2.originalValue()));
+        exprBindings.put(paramIndex, exprBinding);
     }
 
     /**
